--- a/references.bib
+++ b/references.bib
@@ -32,20 +32,28 @@ Data
   url       = {https://wonder.cdc.gov/lbd-current.html},
 }
 
-@misc{Gapminder+GDP:2022, 
-  author    = {{Gapminder Fdn.}},
-  year      = {2022-01},
+@misc{GDP:2022, 
+  author    = {{Gapminder}},
+  year      = {2022},
   title     = {{Gross domestic product per person adjusted for differences in purchasing power}},
   publisher = {{Gapminder based on World Bank}},
   url       = {https://www.gapminder.org/data/},
 }
 
-@misc{Gapminder+LifeExp:2022, 
-  author    = {{Gapminder Fdn.}},
-  year      = {2022-01},
+@misc{LifeExp:2022, 
+  author    = {{Gapminder}},
+  year      = {2022},
   title     = {{Life expectancy at birth}},
   publisher = {{Gapminder}},
   url       = {https://www.gapminder.org/data/},
+}
+
+@misc{MIDFIELD:2021, 
+  author    = {{Matthew Ohland and Russell Long}},
+  year      = {2021},
+  title     = {{Multiple-Institution Database for Investigating Engineering Longitudinal Development}},
+  publisher = {{MIDFIELD}},
+  url       = {https://midfield.online/},
 }
 
 @article{NASA+Snow+Ice:2017, 
