--- a/index.Rmd
+++ b/index.Rmd
@@ -39,9 +39,10 @@ The workshop has three sessions focusing on different aspects of storytelling wi
 [Storytelling with Data](https://www.storytellingwithdata.com/blog), Cole Nussbaumer Knaflic and team   
 
 
-## 2022 MIDFIELD Institute
+## MIDFIELD Institute {.appendix}
 
-- [slides](slides/graph-limitations.html) Graph limitations 
+Slides and handouts for the 2022 MIDFIELD Institute derived from the Data Stories Workshop materials.     
+[[slides] Graph limitations](slides/graph-limitations.html)      
 
 
 
