--- a/docs/slides/effective-charts-slides.Rmd
+++ b/docs/slides/effective-charts-slides.Rmd
@@ -1,6 +1,4 @@
 ---
-title: "Perception, reasoning, and credibility"
-date: "2022-02-14"
 output:
   xaringan::moon_reader:
     css: ["default", "middlebury", "middlebury-fonts", "custom.css"]
@@ -74,13 +72,25 @@ z <- image_border(z, "white", "0x30")
 image_write(z, 
         path = "slides/img/day1-cover-preview.png", 
         format = "png")
+
+# version 2
+p <- image_read("slides/img/pie-preview.png")
+p <- image_scale(p, "x600")
+q <- image_read("slides/img/three-d-bar-preview.png")
+q <- image_scale(q, "x600")
+r <- image_append(c(p, q), stack = FALSE)
+r <- image_scale(r, std_width)
+r <- image_border(r, "white", border_dim)
+s <- image_append(c(r, c), stack = TRUE)
+s <- image_append(c(s, d), stack = TRUE)
+s <- image_border(s, "white", "0x30")
 ```
 
 .left-column[
 <img src="img/day1-cover-preview.png" alt="dot chart">
 ]
 
-# Limitations of common graph types
+# Creating more effective charts
 
 ## Perception, reasoning, and credibility
 
@@ -90,9 +100,9 @@ image_write(z,
 
 <br>
 
-Richard Layton   
-
 2022 MIDFIELD Institute
+
+Richard Layton
 
 <br>
 
@@ -106,8 +116,11 @@ Richard Layton
 
 
 
-
-
+<div class="my-footer">
+<span>
+Title and exercises inspired by Naomi Robbins (2013) <em>Creating More Effective Graphs</em>, Chapter 2, Chart House.
+</span>
+</div>
 
 
 
@@ -149,7 +162,6 @@ class: left
 
 
 
-
 ---
 class:inverse, center, middle
 
@@ -181,9 +193,12 @@ dt1[, pct := round(100 * pop / tot, 0)]
 ]
 
 .pull-right[
-The pie represents 3.6B people in 5 countries. 
+- *Visually estimate* each country's percentage
 
-Fill in the blanks with your visual estimate of the percentage (%) of each pie slice.   
+- Fill-in the blanks in the table
+
+- Total should be 100%
+
 ```{r echo = FALSE}
 top5 <- copy(dt1)
 top5 <- top5[, .(country, pct)]
@@ -195,15 +210,13 @@ top5 %>%
   column_spec(2, color = "white", background = "white") %>%
   column_spec(1, color = "black", background = "white")
 ```
-
-The total should be 100%.
 ]
 
 <div class="my-footer">
 <span>
 Data source:  
 <a href="https://worldpopulationreview.com/">
-2021 World population review</a>
+2021 World population review</a> (The pie represents 3.6B people total.)
 </span>
 </div> 
 
@@ -214,11 +227,12 @@ class: left
 
 # Judging values along a common axis is a high-accuracy task
 
-The same data is displayed along a common scale.   
+- The new chart displays the same data 
 
-Fill in the blanks with your visual estimate of the percentage (%) for each country. 
+- *Visually estimate* the percentages using the new chart
 
-<br>
+- Fill-in the blanks in the table
+
 .right-column[
 ```{r echo=FALSE, fig.asp=0.4, fig.width = 10}
 ggplot(dt1, aes(x = pct, y = reorder(country, pct))) +
@@ -326,10 +340,12 @@ dt2[, pct := round(100 * pop / tot, 0)]
 ![](img/three-d-pie.png)
 ]
 
-.pull-right[
-The pie represents 404M people in 5 countries. 
+.pull-right[- *Visually estimate* each country's percentage
 
-Fill in the blanks with your visual estimate of the percentage (%) of each pie slice. 
+- Fill-in the blanks in the table
+
+- Total should be 100%
+
 ```{r echo = FALSE}
 y <- copy(dt2)
 y <- y[, .(country, pct)]
@@ -342,15 +358,13 @@ y %>%
   column_spec(2, color = "white", background = "white") %>%
   column_spec(1, color = "black", background = "white")
 ```
-
-The total should be 100%. 
 ]
 
 <div class="my-footer">
 <span>
 Data source:  
 <a href="https://worldpopulationreview.com/">
-2021 World population review</a>
+2021 World population review</a> (The pie represents 404M people.)
 </span>
 </div>
 
@@ -366,11 +380,12 @@ class: left
 
 # Again, a common scale improves our visual judgments
 
-The same data is displayed along a common scale.   
+- The new chart displays the same data 
 
-Fill in the blanks with your visual estimate of the percentage (%) for each country. 
+- *Visually estimate* the percentages using the new chart
 
-<br>
+- Fill-in the blanks in the table 
+
 .right-column[
 
 ```{r echo=FALSE, fig.asp=0.4, fig.width = 10}
@@ -468,30 +483,8 @@ Data source:
 
 
 
----
-class: left
 
-# Graph design should align with one's rhetorical goals
 
-.pull-left[
-In going from this design...
-
-<img src="img/three-d-pie-preview.png" alt="pie chart preview" style="height:180px;">
-]
-
-.pull-right[
-...to this design... 
-
-<img src="img/dot-chart-preview.png" alt="stacked bar preview" style="height:180px;">
-]
-
-<br>
-
-- we improve the accuracy of the audience's **perception** of the data 
-
-- we make it easier to **reason** quantitatively about the data 
-
-- which should enhance our **credibility** with the audience 
 
 
 
@@ -522,9 +515,9 @@ class: left
 
 # 3D effects always distort our judgment
 
-Make visual estimates of each country's 2021 population (fill in the blanks).
+- *Visually estimate* each country's population in millions
 
-<br>
+- Fill-in the blanks in the table
 
 .left-column[
 ```{r echo = FALSE}
@@ -564,9 +557,11 @@ class: left
 
 # Same data&mdash;without 3D effects&mdash;along a common scale
 
-Make new visual estimates (fill in the blanks).  
+- The new chart displays the same data 
 
-<br>
+- *Visually estimate* the percentages using the new chart
+
+- Fill-in the blanks in the table 
 
 .left-column[
 ```{r echo = FALSE}
@@ -620,6 +615,8 @@ class: left
 # Same data&mdash;without 3D effects&mdash;along a common scale
 
 Compare your visual estimates to the data values.
+
+<br>
 
 <br>
 
@@ -779,7 +776,7 @@ class: left
 
 # Dot charts allow direct visual comparison of quantities 
 
-Dot charts are effective replacements for pie charts and bar charts. 
+The result is the *dot chart* (Cleveland 1993). 
 
 <br>
 
@@ -793,15 +790,32 @@ f <- ggplot(x, aes(x = pop, y = reorder(country, pop))) +
 f
 ```
 
+
+
+
 <div class="my-footer">
 <span>
-Data source:  
-<a href="https://worldpopulationreview.com/">
-2021 World population review</a>
+William S. Cleveland (1993) <em>Visualizing Data</em> Hobart Press, Summit, NJ. 
 </span>
 </div>
 
 
+
+
+
+
+
+
+
+
+---
+class: left
+
+# Dot charts are effective replacements for pies and bars 
+
+![](img/perceptions-compare-01.png)
+
+![](img/perceptions-compare-02.png)
 
 
 
@@ -830,14 +844,13 @@ class:inverse, center, middle
 ---
 class: left
 
-# Charts encode information
+# Visual grammar: charts encode information
 
 
 
 
-Survey: “What was your reason for taking this postdoc?”
+Surveys: “What was your reason for taking this postdoc?”
 
-<br>
 
 <img src="img/stacked-bar-04.png" alt="stacked bar chart" height="275">
 
@@ -864,10 +877,12 @@ p <- ggplot(dt, aes(x = year, y = pct, color = reason, fill = reason)) +
         legend.key.height = unit(15, "mm"))
 ```
 
-<br>
- 
 
-*Information.* Pick a color. Describe the information it encodes.  
+
+Decode the *information* before discussing *meaning.* 
+
+Select one color. What *information* does the color encode? 
+
 
 
 
@@ -906,17 +921,64 @@ Data source: Main, Joyce B., Yanbing Wang, and Li Tan (2021) “The career outlo
 ---
 class: left
 
-# Charts convey meaning
+# Visual rhetoric: charts convey meaning
 
-Survey: “What was your reason for taking this postdoc?”
-
-<br>
+Surveys: “What was your reason for taking this postdoc?”
 
 <img src="img/stacked-bar-04.png" alt="stacked bar chart" height="275">
 
+Agreeing on what the information *is*, we can consider what it *means*. 
+
+*Meaning.* Describe a story (if any) this chart *conveys to you.*
+
+
+
+
+<div class="my-footer">
+<span>
+Data source: Main, Joyce B., Yanbing Wang, and Li Tan (2021) “The career outlook of engineering PhDs” <em>J of Engineering Education</em> 110 (4): 977–1002.  
+</span>
+</div> 
+
+
+
+
+
+
+
+---
+class: left
+
+# Visual grammar and visual rhetoric depend on the variables 
+
+.pull-left[
+<img src="img/variables-cycle.png" alt="cycle of research question, variables, chart design, and message" height="400">
+]
+
+
+.pull-right[
 <br>
 
-*Meaning.* Describe a story this chart *conveys to you.*
+- What is your question?
+
+- What variables are measured?
+
+- How are the variables classified?
+
+- What chart designs suit these variables?
+
+- What stories do the charts convey? 
+
+- How do the stories refine your questions? 
+
+- What new variables are needed? 
+
+- Repeat
+]
+
+
+
+
 
 
 
@@ -932,57 +994,41 @@ Survey: “What was your reason for taking this postdoc?”
 ---
 class: left
 
-# Classify your variables 
+# What can we say about these variables?  
 
-```{r}
-wrapr::build_frame(
-  "item", "description" |
-  "numeric", "(quantitative) a characteristic whose values are numbers" |
-    "discrete", "Countable and can assume only a finite number of real values on a given interval" |
-    "continuous", "Measureable and can assume an infinite number of real values on a given interval" |
-    "categorical", "(qualitative) a characteristic that can’t be quantified" |
-    "ordinal", "Levels have a natural order, e.g., days of the week, education level, age group" |
-    "nominal", "Levels are unordered, e.g., gender, eye color, mode of transportation" 
-) |>
-  kbl(align = "ll", col.names = NULL) |>
-  kable_paper(lightable_options = "basic", 
-              full_width = TRUE, 
-              font_size = 24) |>
-  column_spec(2, color = "black", background = "white") |>
-  column_spec(1, color = "black", background = "white") |>
-  row_spec(c(1, 4), bold = TRUE, color = "#01665e", background = "#c7eae5")
-```
-
-<br>
-
-*variables $\rightarrow$ chart design  $\rightarrow$  message $\rightarrow$ research question  $\rightarrow$ variables $\rightarrow$ chart design  $\rightarrow$  message $\rightarrow$ ...*
-
-
-
-
-
-
-
-
-
----
-class: left
-
-# What can we say about the variables?  
+Surveys: “What was your reason for taking this postdoc?”
 
 <img src="img/stacked-bar-04.png" alt="stacked bar chart" height="275">
 
-1. Time (discrete years) is a **categorical variable**.
+1. `______PhD completion year___________` is a *categorical* variable.
 
-2. The other categorical variable is `___________________________`
+2. `____________________________________` is a *categorical* variable
 
-3. The quantitative variable is `___________________________`
+3. `____________________________________` is the *quantitative* variable 
 
-4. The independent variable is  `___________________________`
-
-
+4. `____________________________________` is the *independent* variable
 
 
+
+
+
+
+---
+class: left
+
+# What can we say about these variables?  
+
+Surveys: “What was your reason for taking this postdoc?”
+
+<img src="img/stacked-bar-04.png" alt="stacked bar chart" height="275">
+
+1. `______PhD completion year___________` is a *categorical* variable.
+
+2. `______Postdoc reasons_______________` is a *categorical* variable
+
+3. `______Percent citing a reason_______` is the *quantitative* variable (one observation per reason per year)
+
+4. `______PhD completion year___________` is the *independent* variable
 
 
 
@@ -1006,13 +1052,15 @@ class: left
 ---
 class: left
 
-# The appropriate design for a time series is a line graph
+# Time series? Use a line chart. 
+
+The original chart implies the data are a time series.  
 
 ```{r echo=FALSE, fig.asp=0.4, fig.width=16} 
 ggplot(dt, aes(x = year, y = pct, color = reason)) +
   geom_line(linetype = 2) +
   geom_point(size = 4) +
-  labs(y = "", x = "PhD completion year") +
+  labs(y = "Reason cited (%)", x = "PhD completion year") +
   theme_graphclass(font_size = 20) +
   scale_color_brewer(palette = "Dark2")
 ```
@@ -1032,22 +1080,22 @@ ggplot(dt, aes(x = year, y = pct, color = reason)) +
 ---
 class: left
 
-# The appropriate design for a time series is a line graph
+# Time series? Use a line chart. 
 
-Separating reasons into individual panels clarifies the data
+Un-clutter the display using one panel per reason
 
 ```{r echo=FALSE, fig.asp=0.4, fig.width=13}
 ggplot(dt, aes(x = year, y = pct)) +
   geom_line(linetype = 2) +
   geom_point(size = 4) +
   facet_wrap(vars(reorder(reason, pct, median)), as.table = FALSE) +
-  labs(y = "", x = "PhD completion year") +
+  labs(y = "Reason cited (%)", x = "PhD completion year") +
   theme_graphclass(font_size = 20)
 
 ```
 
 
-*Meaning.* Describe a story this chart *conveys to you.*
+*Meaning.* Describe a story (if any) this chart *conveys to you.*
 
 
 
@@ -1072,13 +1120,14 @@ ggplot(dt, aes(x = year, y = pct)) +
 ---
 class: left
 
-# The problem is time
+# An unstated assumption underlies the visual muddle
 
-Time&mdash;in this case&mdash;is not a useful independent variable
+*Emphasizing the trivial* (Howard Wainer)
 
-- Time locks us into the graphical conventions of time series. 
+- Poor choice of independent variable
 
-- What Howard Wainer calls *emphasizing the trivial*.  
+- Imposes a visual convention 
+
 
 
 <div class="my-footer">
@@ -1093,18 +1142,18 @@ Howard Wainer (1997) <em>Visual Revelations</em>, Lawrence Erlbaum Assoc., Mahwa
 --
 
 <br>
-Suppose we drop the year variable
+Ignore time, the remaining variables are:
 
-- a single quantity: set of reported percentages
+- percent citing a reason (quantitative) distributed
 
-- conditioned by a category: reasons for postdoc training 
+- reasons (categorical, 6 levels) 
 
 
 
 
 --
-
-- boxplots summarize distributions
+<br>
+A distributed quantity is displayed in a box-and-whisker plot
 
 .center[
 ```{r echo=FALSE, fig.asp=0.15, fig.width=10}
@@ -1148,7 +1197,9 @@ ggplot(z, aes(x = pct, y = reason)) +
 ---
 class: left
 
-# Our final design shows distributions of annual percentages 
+# Distributions? Use a box-and-whisker plot.  
+
+Surveys: “What was your reason for taking this postdoc?”
 
 ```{r echo=FALSE, fig.asp=0.35, fig.width=13}
 ggplot(dt, aes(x = pct, y = reorder(reason, pct, median))) +
@@ -1161,7 +1212,6 @@ ggplot(dt, aes(x = pct, y = reorder(reason, pct, median))) +
   theme_graphclass(font_size = 22)
 
 ```
-
 
 <br>
 
@@ -1183,32 +1233,37 @@ ggplot(dt, aes(x = pct, y = reorder(reason, pct, median))) +
 
 
 
+
 ---
 class: left
 
-# Graph design should align with one's rhetorical goals
+# Reflect on perception, reasoning, and credibility
 
-.pull-left[
-In going from this design...
+.left-column[
+Compare the stacked bar
 
-<img src="img/stacked-bar-03.png" alt="stacked bar preview" style="height:250px;">
+<img src="img/stacked-bar-03.png" alt="stacked bar preview">
+
+to the boxplot design. 
+
+<img src="img/boxplot-preview-2.png" alt="stacked bar preview">
 ]
 
-.pull-right[
-...to this design... 
+.right-column[
+*Select any prompt.* Outline your response:  
 
-<img src="img/boxplot-preview-2.png" alt="stacked bar preview" style="height:250px;">
+<br>
+
+- Compare designs: Quantitative data are *perceived* accurately.  
+
+<br>
+
+- Compare designs: *Reasoning* about the data is supported effectively. 
+
+<br>
+
+- Compare designs: An argument is given *credible* visual support. 
 ]
-
-- we improve the audience's **perception** of the stories in the data 
-
-- we make it easier to **reason** quantitatively about the data 
-
-- which should enhance our **credibility** with the audience 
-
-
-
-
 
 
 
@@ -1248,6 +1303,14 @@ The optimal graph design depends on two factors, primarily,
 2. The variables to be shown
 ]
 
+
+
+<div style="text-align: right;">
+<img src="img/variables-cycle.png" style="width:300px;vertical-align: bottom;"/>
+</div>
+
+
+
 <div class="my-footer">
 <span>
 Jean-luc Doumont (2009) <em>Trees, Maps and Theorems</em>, Principiae. 
@@ -1267,12 +1330,18 @@ class: left
 <img src="img/tufte-face.png" alt="Edward Tufte" style="width:250px;">
 ]
 .right-column[
-... the task of the designer is to give 
+The task of the designer is to give visual access 
 
-visual access to the subtle and the difficult&mdash;
+to the subtle and the difficult&mdash;that is, 
 
-that is, the revelation of the complex.
+the revelation of the complex.
 ]
+
+
+<div style="text-align: right;">
+<img src="img/variables-cycle.png" style="width:300px;vertical-align: bottom;"/>
+</div>
+
 
 <div class="my-footer">
 <span>
@@ -1296,10 +1365,18 @@ class: left
 <img src="img/evergreen-face.png" alt=" Stephanie Evergreen" style="width:250px;">
 ]
 .right-column[
+
+<br>
+
 What’s your point? 
 
 Seriously, that’s the most important question. 
 ]
+
+<div style="text-align: right;">
+<img src="img/variables-cycle.png" style="width:300px;vertical-align: bottom;"/>
+</div>
+
 
 <div class="my-footer">
 <span>
@@ -1322,16 +1399,16 @@ class: left
 <img src="img/cairo-face.png" alt="Alberto Cairo" style="width:250px;">
 ]
 .right-column[
-Charts can lie to to us because 
+Charts can lie to to us because we read too much into
 
-we read too much into them or 
-
-see in them what we want to believe. 
-
-<br>
+them or see in them what we want to believe. 
 
 Don't lie to yourself (or others) with charts. 
 ]
+
+<div style="text-align: right;">
+<img src="img/variables-cycle.png" style="width:300px;vertical-align: bottom;"/>
+</div>
 
 
 <div class="my-footer">
